--- a/styles.css
+++ b/styles.css
@@ -60,8 +60,8 @@ body {
     padding: 20px;
     box-sizing: border-box;
     opacity: 0;
-    transform: rotateX(-180deg); /* Update this line */
-    transform-origin: bottom; /* Update this line */
+    transform: rotateX(180deg); /* Change to 180deg */
+    transform-origin: top;
     transition: opacity 0.5s, transform 0.5s;
     display: flex;
     flex-direction: column;
