--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,6 @@ body {
     width: 100%;
     height: 100%;
     background-color: #ff6f61;
-    transform: rotateX(0deg);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -60,9 +59,9 @@ body {
     padding: 20px;
     box-sizing: border-box;
     opacity: 0;
-    transform: rotateX(180deg); /* Change to 180deg */
+    transform: rotateX(90deg); /* Start at 90deg to hide initially */
     transform-origin: top;
-    transition: opacity 0.5s, transform 0.5s;
+    transition: opacity 0.5s, transform 1s;
     display: flex;
     flex-direction: column;
     justify-content: center;
